syntax = "proto3";

package smartcore.bos.driver.axiomxa;

option go_package = "github.com/vanti-dev/sc-bos/pkg/driver/axiomxa/rpc";

service AxiomXaDriverService {
  rpc SaveQRCredential(SaveQRCredentialRequest) returns (SaveQRCredentialResponse);
}

message SaveQRCredentialRequest{
  string name = 1;
  bytes qr_body = 2;
  string account = 3;
}

message SaveQRCredentialResponse {}
